--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site
-name: "Mediumish"
-title: "Mediumish"
-description: "Jekyll template, Medium styled, free for bloggers."
-logo: 'assets/images/logo.png'
+name: "wander_foxx"
+title: "wander-foxx 101"
+description: "Although the page goes by wander_fool, this if for wander_foxx or wait, shes what the frah now"
+logo: 'assets/images/DSC06255_pp.jpg'
 favicon: 'assets/images/logo.png'
 baseurl: /mediumish-theme-jekyll
 google_analytics: 'UA-46278016-1'
@@ -13,23 +13,24 @@ permalink: /:title/
 
 # Authors
 authors:
-  sal:
-    name: Sal
-    display_name: Sal
-    gravatar: e56154546cf4be74e393c62d1ae9f9d4
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
+  Aqiob:
+    name: Aquib Nadaf
+    display_name: Quibs
+    avatar:'assets/images/picture (2).jpg'
+    gravatar: wander_fool@icloud.com
+    email: wander_fool@icloud.com
+    web: https:/aquibrifath.github.io
     twitter: https://twitter.com/wowthemesnet
-    description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
-  john:
-    name: John
-    display_name: John    
-    avatar: 'assets/images/avatar.png'
+    description: "Just a quibs"
+  Ifrah:
+    name: Ifrah
+    display_name: Iffu    
+    avatar: 'assets/images/DSC06255_pp.jpg
     gravatar: b1cc14991db7a456fcd761680bbc8f81
-    email: wowthemesnet@gmail.com
+    email: ifrahfoxx@gmail.com
     web: https://www.wowthemes.net
     twitter: https://twitter.com/wowthemesnet
-    description: "This is the author box. Write a short description of the author here. You are currently previewing Mediumish demo, a Jekyll template compatible with Github pages."
+    description: "Iffu to quibs"
 
 # Plugins
 plugins:
